# clock

./: README.md  pyproject.toml
src/clock/: __init__.py
src/time_server/: server.py
