[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "clock"
version = "0.1.1"
description = "A simple clock MCP server built with Smithery"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

requires-python = ">=3.10"
dependencies = [
    "mcp>=1.14.0",
    "smithery>=0.2.3",
]

[project.scripts]
# Run the MCP server in development mode
dev = "smithery.cli.dev:main"
# Run server with interactive testing playground
playground = "smithery.cli.playground:main"

[tool.smithery]
# Function that returns a patched FastMCP server
server = "clock.server:create_server"


